# fomodynamics

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: constraints.md  control_guide.md  frame_conventions.md  jax_simulator_guide.md  moth_3dof_equations.md  moth_modeling.md  moth_simulation_vision.md  moth_vertical_geometry.md  overall_testing_approach.md  physical_intuition_guide.md  sailor_mass_modeling.md  simulator_architecture.md  simulator_models.md  timestep_guide.md  trim_solver.md  wand_linkage_kinematics.md
docs/dev/: adding_components.md  moth_reference.md  testing.md  visualization.md
docs/guides/getting_familiar/: 00_introduction.md  01_jax_primer.md  02_core_concepts.md  03_simple_pendulum.md  04_cartpole.md  06_planar_quadrotor.md  10_extending_blur.md  10_extending_fomodynamics.md  index.md
docs/reports/wand_vs_pid_waves/: README.md  interpretation_skill.md  metrics.json  model_setup.md  recipe.md  report.md  report_guidelines.txt  run.py
examples/: cartpole_mpc.py  drop_test.py  moth_geometry.py  moth_lqg_calm_water.py  moth_open_loop.py  moth_sim_smoke_test.py  pendulum.py  plot_moth_smoke_test.py  spinning_disk.py
notebooks/: moth_observability_analysis.ipynb
notebooks/getting_familiar/: gf_01_jax_basics.ipynb  gf_03_simple_pendulum.ipynb  gf_04_cartpole.ipynb  gf_06_planar_quadrotor.ipynb
scripts/: calibrate_thrust_table.py
src/fmd/: __init__.py
src/fmd/analysis/: __init__.py  cli.py  closed_loop.py  core.py  generate.py  operations.py  processing.py  time_grid.py  wave_plots.py
src/fmd/control/: __init__.py  _config.py
src/fmd/core/: __init__.py  abc.py  coordinates.py  jax_config.py  operations.py  quaternion.py  units.py
src/fmd/estimation/: __init__.py  ekf.py  kalman.py  measurement.py  moth_measurements.py
src/fmd/ocp/: __init__.py  analysis.py  multiple_shooting.py  result.py
src/fmd/simulator/: __init__.py  _config.py  base.py  boat_2d.py  box_1d.py  cartpole.py  closed_loop_pipeline.py  control.py  controllers.py  environment.py  estimators.py  integrator.py  linearize.py  lqr.py  moth_3d.py  moth_forces_extract.py  moth_lqr.py  moth_metrics.py  moth_scenarios.py  moth_validation.py  output.py  pendulum.py  planar_quadrotor.py  provenance.py  quaternion.py  rigid_body.py  sensors.py  sweep.py  trajectories.py  trim.py  trim_calibration.py  trim_casadi.py  trim_report.py  validation.py  validation_io.py  waves.py
tests/: __init__.py  conftest.py  test_cli.py  test_integration.py
tests/analysis/: __init__.py  test_closed_loop.py  test_core.py  test_filters.py  test_loaders.py  test_operations.py  test_plotting.py  test_processing.py  test_simulation_plots.py  test_units.py  test_viz3d_coordinates.py  test_viz3d_generic_logger.py  test_viz3d_logger.py
tests/analysis/moth/: test_viz3d_geometry.py  test_viz3d_lqg_logger.py
tests/core/: __init__.py  test_jax_numpy_parity.py  test_operations.py  test_quaternion.py  test_units.py
tests/data/: test_vakaros_data.csv
tests/estimation/: __init__.py  test_ekf.py  test_kalman.py  test_kf_simple_systems.py  test_measurement.py  test_measurement_noise.py
tests/estimation/moth/: test_estimation.py  test_measurements.py  test_observability.py
tests/ocp/: __init__.py  conftest.py  test_cartpole_ocp.py  test_control_smoothing.py  test_multiple_shooting.py
tests/simulator/: __init__.py  test_encounter_distance.py  test_environment.py  test_inertia.py  test_integrator_constraints.py  test_integrator_time_grid.py  test_noisy_simulation.py  test_params.py  test_provenance.py  test_trajectories.py  test_wave_channel_directional.py  test_wave_sign_conventions.py  test_waves.py  test_waves_stokes.py
(+134 files in other folders)
